@@ -1,40 +1,27 @@
 module AuthenticatedSystem
   protected
   def logged_in?
-    # Example of integration with account_location plugin
-    # session[account_subdomain] == :authenticated && current_<%= file_name %>
     current_<%= file_name %>
   end
 
-  # accesses the current <%= file_name %> from the session.
-  # overwrite this to set how the current <%= file_name %> is retrieved from the session.
-  # To store just the whole <%= file_name %> model in the session:
-  #
-  #   def current_<%= file_name %>
-  #     session[:<%= file_name %>]
-  #   end
-  # 
+  # Accesses the current <%= file_name %> from the session.
   def current_<%= file_name %>
     @current_<%= file_name %> ||= session[:<%= file_name %>] ? <%= class_name %>.find_by_id(session[:<%= file_name %>]) : nil
   end
 
-  # store the given <%= file_name %> in the session.  overwrite this to set how
-  # <%= table_name %> are stored in the session.  To store the whole <%= file_name %> model, do:
-  #
-  #   def current_<%= file_name %>=(new_<%= file_name %>)
-  #     session[:<%= file_name %>] = new_<%= file_name %>
-  #   end
-  # 
+  # Store the given <%= file_name %> in the session.
   def current_<%= file_name %>=(new_<%= file_name %>)
-    # Example of integration with account_location plugin
-    # session[account_subdomain] = new_<%= file_name %>.nil? ? nil : :authenticated
     session[:<%= file_name %>] = new_<%= file_name %>.nil? ? nil : new_<%= file_name %>.id
     @current_<%= file_name %> = new_<%= file_name %>
   end
 
-  # overwrite this if you want to restrict access to only a few actions
-  # or if you want to check if the <%= file_name %> has the correct rights  
-  # example:
+  # Check if the <%= file_name %> is authorized.
+  #
+  # Override this method in your controllers if you want to restrict access
+  # to only a few actions or if you want to check if the <%= file_name %>
+  # has the correct rights.
+  #
+  # Example:
   #
   #  # only allow nonbobs
   #  def authorize?(<%= file_name %>)
@@ -44,9 +31,13 @@ module AuthenticatedSystem
      true
   end
 
-  # overwrite this method if you only want to protect certain actions of the controller
-  # example:
-  # 
+  # Check whether or not to protect an action.
+  #
+  # Override this method in your controllers if you only want to protect
+  # certain actions.
+  #
+  # Example:
+  #
   #  # don't protect the login and the about method
   #  def protect?(action)
   #    if ['action', 'about'].include?(action)
@@ -59,62 +50,63 @@ module AuthenticatedSystem
     true
   end
 
-  # Example of integration with account_location plugin
-  # def account?
-  #   @account ||= Account.find_by_username(account_subdomain)
-  # end
-  # 
-  # def account_required
-  #   return true if account?
-  #   redirect_to(:controller => '/<%= controller_file_name %>', :action => 'index') and return false
-  # end
-
-  # To require logins, use:
+  # Filter method to enforce a login requirement.
   #
-  #   before_filter :login_required                            # restrict all actions
-  #   before_filter :login_required, :only => [:edit, :update] # only restrict these actions
-  # 
+  # To require logins for all actions, use this in your controllers:
+  #
+  #   before_filter :login_required
+  #
+  # To require logins for specific actions, use this in your controllers:
+  #
+  #   before_filter :login_required, :only => [ :edit, :update ]
+  #
   # To skip this in a subclassed controller:
   #
   #   skip_before_filter :login_required
-  # 
+  #
   def login_required
-    # skip login check if action is not protected
+    # Skip this filter if the requested action is not protected
     return true unless protect?(action_name)
 
-    # check if <%= file_name %> is logged in and authorized
+    # Check if <%= file_name %> is logged in and authorized
     return true if logged_in? and authorized?(current_<%= file_name %>)
 
-    # store current location so that we can 
-    # come back after the <%= file_name %> logged in
+    # Store current location so that we can redirect back after login
     store_location
 
-    # call overwriteable reaction to unauthorized access
+    # Call access_denied for an appropriate redirect and stop the filter
+    # chain here
     access_denied and return false
   end
 
-  # overwrite if you want to have special behavior in case the <%= file_name %> is not authorized
-  # to access the current operation. 
-  # the default action is to redirect to the login screen
-  # example use :
-  # a popup window might just close itself for instance
+  # Redirect as appropriate when an access request fails.
+  #
+  # The default action is to redirect to the login screen.
+  #
+  # Override this method in your controllers if you want to have special
+  # behavior in case the <%= file_name %> is not authorized
+  # to access the requested action.  For example, a popup window might
+  # simply close itself.
   def access_denied
     redirect_to :controller => '/<%= controller_file_name %>', :action => 'login'
   end  
 
-  # store current uri in  the session.
-  # we can return to this location by calling return_location
+  # Store the URI of the current request in the session.
+  #
+  # We can return to this location by calling #redirect_back_or_default.
   def store_location
     session[:return_to] = request.request_uri
   end
 
-  # move to the last store_location call or to the passed default one
+  # Redirect to the URI stored by the most recent store_location call or
+  # to the passed default.
   def redirect_back_or_default(default)
     session[:return_to] ? redirect_to_url(session[:return_to]) : redirect_to(default)
     session[:return_to] = nil
   end
 
-  # adds ActionView helper methods
+  # Inclusion hook to make #current_<%= file_name %> and #logged_in?
+  # available as ActionView helper methods.
   def self.included(base)
     base.send :helper_method, :current_<%= file_name %>, :logged_in?
   end
