@@ -1,29 +1,3 @@
-# Sample schema:
-#   create_table "<%= table_name %>", :force => true do |t|
-#     t.column "login",            :string, :limit => 40
-#     t.column "email",            :string, :limit => 100
-#     t.column "crypted_password", :string, :limit => 40
-#     t.column "salt",             :string, :limit => 40
-#     t.column "activation_code",  :string, :limit => 40 # only if you want
-#     t.column "activated_at",     :datetime             # user activation
-#     t.column "created_at",       :datetime
-#     t.column "updated_at",       :datetime
-#   end
-#
-# If you wish to have a mailer, run:
-#
-#   ./script/generate authenticated_mailer user
-# 
-# Be sure to add the observer to the form login controller:
-#
-#   class AccountController < ActionController::Base
-#     observer :user_observer
-#   end
-#
-# For extra credit: keep these two requires for 2-way reversible encryption
-# require 'openssl'
-# require 'base64'
-#
 require 'digest/sha1'
 class <%= class_name %> < ActiveRecord::Base
   # Virtual attribute for the unencrypted password
@@ -38,13 +12,9 @@ class <%= class_name %> < ActiveRecord::Base
   validates_length_of       :email,    :within => 3..100
   validates_uniqueness_of   :login, :email, :salt
   before_save :encrypt_password
-  # Uncomment this to use activation
-  # before_create :make_activation_code
 
   # Authenticates a user by their login name and unencrypted password.  Returns the user or nil.
   def self.authenticate(login, password)
-    # use this instead if you want user activation
-    # u = find :first, :select => 'id, salt', :conditions => ['login = ? and activated_at IS NOT NULL', login]
     u = find_by_login(login) # need to get the salt
     u && u.authenticated?(password) ? u : nil
   end
@@ -63,45 +33,6 @@ class <%= class_name %> < ActiveRecord::Base
     crypted_password == encrypt(password)
   end
 
-  # More extra credit for adding 2-way encryption.  Feel free to remove self.encrypt above if you use this
-  #
-  # # Encrypts some data with the salt.
-  # def self.encrypt(password, salt)
-  #   enc = OpenSSL::Cipher::Cipher.new('DES-EDE3-CBC')
-  #   enc.encrypt(salt)
-  #   data = enc.update(password)
-  #   Base64.encode64(data << enc.final)
-  # end
-  # 
-  # # getter method to decrypt password
-  # def password
-  #   unless @password
-  #     enc = OpenSSL::Cipher::Cipher.new('DES-EDE3-CBC')
-  #     enc.decrypt(salt)
-  #     text = enc.update(Base64.decode64(crypted_password))
-  #     @password = (text << enc.final)
-  #   end
-  #   @password
-  # rescue
-  #   nil
-  # end
-
-  # Uncomment these methods for user activation  These also help let the mailer know precisely when the user is activated.
-  # There's also a commented-out before hook above and a protected method below.
-  #
-  # The controller has a commented-out 'activate' action too.
-  #
-  # # Activates the user in the database.
-  # def activate
-  #   @activated = true
-  #   update_attributes(:activated_at => Time.now.utc, :activation_code => nil)
-  # end
-  # 
-  # # Returns true if the user has just been activated.
-  # def recently_activated?
-  #   @activated
-  # end
-  
   protected
   # before filter 
   def encrypt_password
@@ -113,9 +44,4 @@ class <%= class_name %> < ActiveRecord::Base
   def password_required?
     crypted_password.blank? or not password.blank?
   end
-
-  # If you're going to use activation, uncomment this too
-  #def make_activation_code
-  #  self.activation_code = Digest::SHA1.hexdigest( Time.now.to_s.split('//').sort_by {rand}.join )
-  #end
 end
