@@ -1,3 +1,7 @@
+* (28 May 2006)
+
+  Removed "extra credit" documentation into wiki: http://technoweenie.stikipad.com/plugins/show/Acts+as+Authenticated
+
 * (25 May 2006)
 
   Added account_location plugin hooks
